Set the buy button to fix bug on safari. Placed libs used in readme

--- a/sass/stylus.scss
+++ b/sass/stylus.scss
@@ -459,7 +459,7 @@
 		}
 		&__button {
 			button {
-				width: 180px;
+				width: 183px;
 				height: 44px;
 				border-radius: 4px;
 	  		background-color: #73b528;
